# monitoring_ai

./: README  docker-compose.yml  package-lock.json
backend/: .gitignore  Dockerfile  alembic.ini  pyproject.toml  test_date_parsing.py  verify_ml_status.py
backend/alembic/: env.py
backend/alembic/versions/: 3aa1f162842f_add_coordinates_to_cities.py  407cdf442bfe_create_users_table.py  95540a08420e_added_lng_and_lat_to_cities.py  ca9fd674a05c_create_users_table.py
backend/app/: ai.py  api.py  api_endpoints.py  auth.py  db.py  main.py  models.py  quality_models.pkl  schemas.py  train_model.py  train_quality_model.py
backend/app/data/: berezen-_2025.csv  shchodenni-za-berezn-2024.csv  shchodenni-za-cherven-2024.csv  shchodenni-za-cherven-2025 (1).csv  shchodenni-za-gruden-2024.csv  shchodenni-za-kviten-2024.csv  shchodenni-za-kviten-2025.csv  shchodenni-za-lipen-2024.csv  shchodenni-za-lipen-2025 (1).csv  shchodenni-za-listopad-2024.csv  shchodenni-za-liutii-2024.csv  shchodenni-za-liutii-2025.csv  shchodenni-za-serpen-2024.csv  shchodenni-za-sichen-2025.csv  shchodenni-za-traven-2024.csv  shchodenni-za-traven-2025.csv  shchodenni-za-veresen-2024.csv  shchodenni-za-zhovten-2024.csv  shchodennisichen2024.xlsx
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.css  App.tsx  api.ts  auth-context.tsx  index.css
frontend/src/components/: AddStationModal.tsx  ChartView.tsx  CitySelector.tsx  PollutantSelector.tsx  StationSelector.tsx
frontend/src/pages/: AdminDashboard.tsx  Dashboard.tsx  Login.tsx  (+1 more)
